Check XFB indexed bindings during bufferData calls https://bugs.webkit.org/show_bug.cgi?id=223358

Reviewed by Kimmo Kinnunen.

A buffer which is simultaneously bound to an indexed
TRANSFORM_FEEDBACK_BUFFER binding point in the currently bound
transform feedback object and any other binding point in the WebGL API,
except generic TRANSFORM_FEEDBACK_BUFFER binding point, cannot be used.

Fixes conformance2/transform_feedback/simultaneous_binding.html

Drive-by:
* Skip extra error generation in copyBufferSubData and getBufferSubData.
* Remove deleted buffer from indexed uniform bindings.

* LayoutTests/TestExpectations:
* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::validateBufferDataTarget):
(WebCore::WebGL2RenderingContext::copyBufferSubData):
(WebCore::WebGL2RenderingContext::getBufferSubData):
(WebCore::WebGL2RenderingContext::uncacheDeletedBuffer):
* Source/WebCore/html/canvas/WebGLTransformFeedback.h:
(WebCore::WebGLTransformFeedback::hasBoundIndexedTransformFeedbackBuffer):
* Source/WebCore/html/canvas/WebGLVertexArrayObjectBase.h:
(WebCore::WebGLVertexArrayObjectBase::hasArrayBuffer):

Canonical link: https://commits.webkit.org/253210@main